--- a/templates/layout.html
+++ b/templates/layout.html
@@ -24,9 +24,9 @@
 
     <nav>
         <ul class="container">
-            <li><a href="/"><img aria-hidden="true" src="/logo-white.svg" width="20px">Govdirectory</a></li>
-            <li><a href="/countries/">Countries</a></li>
-            <li><a href="/about/">About</a></li>
+            <li><a class="no-decoration" href="/"><img aria-hidden="true" src="/logo-white.svg" width="20px">Govdirectory</a></li>
+            <li><a class="no-decoration" href="/countries/">Countries</a></li>
+            <li><a class="no-decoration" href="/about/">About</a></li>
         </ul>
     </nav>
 
@@ -41,12 +41,12 @@
     <footer>
         <div class="footer-table container">
             <div class="column">
-                <p class="footer-header"><a href="/">Govdirectory</a></p>
+                <p class="footer-header">Govdirectory</p>
                 <ul class="list-unstyled">
 
-                    <li><a href="/about/">About</a></li>
+                    <li><a class="no-decoration" href="/about/">About</a></li>
 
-                    <li><a href="https://twitter.com/govdirectory">Twitter</a></li>
+                    <li><a class="no-decoration" href="https://twitter.com/govdirectory">Twitter</a></li>
 
                 </ul>
             </div>
@@ -54,9 +54,9 @@
                 <p class="footer-header">Join the community</p>
                 <ul class="list-unstyled">
 
-                    <li><a href="https://github.com/govdirectory">Github</a></li>
+                    <li><a class="no-decoration" href="https://github.com/govdirectory">Github</a></li>
 
-                    <li><a href="https://www.wikidata.org/wiki/Wikidata:Gov_Directory">Improve the data</a></li>
+                    <li><a class="no-decoration" href="https://www.wikidata.org/wiki/Wikidata:Gov_Directory">Improve the data</a></li>
 
                 </ul>
             </div>
@@ -64,11 +64,8 @@
                 <p class="footer-header">License information</p>
                 <ul class="list-unstyled">
 
-                    <li>All data is licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/" rel="license"
-                            class="light-link">CC0 1.0 Universal</a>.</li>
-                    <li>For images and other resources, see <a
-                            href="https://github.com/govdirectory/website/blob/main/LICENSE" rel="license"
-                            class="light-link">LICENSE</a>.</li>
+                    <li>All data is licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/" rel="license">CC0 1.0 Universal</a>.</li>
+                    <li>For images and other resources, see <a href="https://github.com/govdirectory/website/blob/main/LICENSE" rel="license">LICENSE</a>.</li>
                 </ul>
             </div>
         </div>
