dark links should be dark on hover/focus

--- a/static/main.css
+++ b/static/main.css
@@ -35,7 +35,7 @@ a, a:hover {
     text-decoration: none;
 }
 
-.dark-link {
+.dark-link, .dark-link:hover, .dark-link:focus {
     text-decoration: underline;
     color: #000;
 }
