--- a/templates/about.html
+++ b/templates/about.html
@@ -32,7 +32,7 @@
 <section>
   <div class="container center-text">
     <h2 class="h2-lg">Support</h2>
-    <p class="content">This project is supported through Wikimedia Deutschland's <a href="https://www.wikimedia.de/unlock/" class="dark-link">Unlock Accelerator.</a></p>
+    <p class="content">This project is supported through Wikimedia Deutschland's <a href="https://www.wikimedia.de/unlock/" class="dark-link">Unlock Accelerator</a>.</p>
   </div>
 </section>
 {{ end }}
