--- a/templates/org.html
+++ b/templates/org.html
@@ -74,7 +74,9 @@
     {{ if $socialAccounts }}
         {{ template "social-table.html" $socialAccounts }}
     {{ else }}
-        <p>No social media accounts found! Know some? Add them to <a href="https://wikidata.org/wiki/{{ .qid }}">Wikidata</a>.</p>
+    <div class="container">
+        <p class="call-out">No social media accounts found! Know some? Add them to <a href="https://wikidata.org/wiki/{{ .qid }}">Wikidata</a>.</p>
+    </div>
     {{ end }}
 </main>
 {{ end }}
