--- a/templates/org.html
+++ b/templates/org.html
@@ -101,23 +101,25 @@
 <script>
 const dataTable = document.querySelector('table');
 
-let csv = '"Platform","Account link",\n';
-Array.from(dataTable.children[0].children).forEach((row, index) => {
-    if (index === 0) return; // header
-    const columns = Array.from(row.children);
-    let rowCSV = '';
-    columns.forEach((column, innerIndex) => {
-        let value;
-        if (column.children[0] && column.children[0].nodeName === 'A') {
-            value = column.children[0].href;
-        } else {
-            value = column.innerText;
-        }
+if (dataTable) {
+    let csv = '"Platform","Account link",\n';
+    Array.from(dataTable.children[0].children).forEach((row, index) => {
+        if (index === 0) return; // header
+        const columns = Array.from(row.children);
+        let rowCSV = '';
+        columns.forEach((column, innerIndex) => {
+            let value;
+            if (column.children[0] && column.children[0].nodeName === 'A') {
+                value = column.children[0].href;
+            } else {
+                value = column.innerText;
+            }
 
-        rowCSV += '"' + value + '",';
+            rowCSV += '"' + value + '",';
+        });
+        csv += rowCSV + '\n';
     });
-    csv += rowCSV + '\n';
-});
+}
 
 const downloadElm = document.querySelector('#download');
 downloadElm.href = window.URL.createObjectURL(new Blob([csv], { type: 'text/csv' }));
