--- a/static/main.css
+++ b/static/main.css
@@ -311,7 +311,13 @@ header.item {
 .header-lower {
     display: grid;
     grid-gap: 1em;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: auto;
+}
+
+.action-boxes {
+    display: grid;
+    grid-gap: 1em;
+    grid-template-columns: auto;
 }
 
 .infobox {
@@ -339,6 +345,10 @@ header.item {
     .hide-mobile {
         display: initial;
     }
+
+    .action-boxes {
+        grid-template-columns: auto auto;
+    }
 }
 
 @media screen and (min-width: 800px) {
@@ -353,6 +363,14 @@ header.item {
 
     .footer-table {
         grid-template-columns: auto auto auto;
+    }
+
+    .action-boxes {
+        grid-template-columns: auto;
+    }
+
+    .header-lower {
+        grid-template-columns: auto auto;
     }
 
     .hide-mobile {
