👤 display usernames not full urls
To accounts from org pages

--- a/templates/social-table.html
+++ b/templates/social-table.html
@@ -7,7 +7,7 @@
     {{- range . -}}
     <tr>
         <td>{{ .platformLabel }}</td>
-        <td><a href="{{ .url }}">{{ .url }}{{ if eq .verified.String "true" }} (verified){{ end }}</a></td>
+        <td><a href="{{ .url }}">{{ .account }}{{ if eq .verified.String "true" }} (verified){{ end }}</a></td>
     </tr>
     {{ end -}}
 </table>
