--- a/templates/org.html
+++ b/templates/org.html
@@ -121,7 +121,7 @@
   "@type": "Organization",
   "description": "{{ .orgDescription }}",
   {{- if .email -}}"email": "{{ replace .email "mailto:" "" 1 }}",{{- end }}
-  "additionalType": "{{ .type }}",
+  {{- if .type -}}"additionalType": "{{ .type }}",{{- end }}
   "url": "{{ $global.root_url }}{{ template "get-country-url.html" .country }}/{{ .qid }}",
   "sameAs": [{{ if $socialAccounts }}{{ range $socialAccounts }}"{{ html .url}}",{{ end }}{{ end }}"http://wikidata.org/entity/{{ .qid }}"],
   "name": "{{ .orgLabel }}"
