⭐ Topics list and topic pages #90
Listing looks like the country listing for now and not per the design spec.

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -26,6 +26,7 @@
         <ul class="container">
             <li><a class="no-decoration" href="/"><img title="Home" src="/logo-white.svg" width="20px"><span aria-hidden="true" class="hide-mobile">Govdirectory</span></a></li>
             <li><a class="no-decoration" href="/countries/">Countries</a></li>
+            <li><a class="no-decoration" href="/topics/">Topics</a></li>
             <li><a class="no-decoration" href="/about/">About</a></li>
         </ul>
     </nav>
