--- a/templates/org.html
+++ b/templates/org.html
@@ -36,10 +36,24 @@
   {{- end -}}
 {{- end -}}
 
+{{ $cofogLabel := false }}
+{{ $cofogSafeName := false }}
+{{- if .cofog -}}
+    {{ $cofog := .cofog }}
+    {{- $topics := query "topics" -}}
+    {{- range $topics -}}
+        {{- if eq $cofog .class -}}
+            {{ $cofogLabel = .name }}
+            {{ $cofogSafeName = .safeName }}
+        {{- end -}}
+    {{- end -}}
+{{- end -}}
+
 <div class="container">
     <header class="item">
         <div class="btn-list">
             <a class="btn rounded" href="/{{ $currentCountrySafeName }}/">{{ $currentCountryName }}</a>
+            {{- if .cofog -}}<a class="btn rounded" href="/{{ $cofogSafeName }}/">{{ $cofogLabel }}</a>{{- end -}}
         </div>
         <h1>{{ .orgLabel }}</h1>
         <p>{{ .orgDescription }}</p>
