🔇 add aria-hidden to visual topic icons

--- a/templates/topic-list.html
+++ b/templates/topic-list.html
@@ -13,7 +13,7 @@
             <li>
                 <a href="/{{ .safeName }}">
                     <div>
-                        <img src="/topic-icons/{{ .safeName }}.svg"/>
+                        <img aria-hidden="true" src="/topic-icons/{{ .safeName }}.svg"/>
                     </div>
                     <span>{{ .name }}</span>
                 </a>
