🔌 hide dynamic 404 hints if JS is not enabled

--- a/templates/404.html
+++ b/templates/404.html
@@ -14,8 +14,8 @@
       <h1>Page missing</h1>
       <p>The page you were searching for is missing.</p>
 
-      <p id="looking">We are looking for it.</p>
-      <div id="hint"></div>
+      <p class="need-js" id="looking">We are looking for it.</p>
+      <div class="need-js" id="hint"></div>
       {{- template "spinner.html" -}}
     </div>
   </section>
