--- a/templates/components/spinner.html
+++ b/templates/components/spinner.html
@@ -1,4 +1,4 @@
-<div aria-hidden="true" class="spinner">
+<div aria-hidden="true" class="spinner need-js">
   <div class="dot1"></div>
   <div class="dot2"></div>
   <div class="dot3"></div>
