--- a/static/main.css
+++ b/static/main.css
@@ -26,6 +26,14 @@ ul {
     text-align:center;
 }
 
+.h3-lg {
+    font-size: clamp(2rem, 8vw, 2rem);
+    font-weight: 400;
+    line-height: 1.15;
+    margin: 0;
+    text-align:center;
+}
+
 a, a:hover {
     text-decoration: underline;
     color: #FFF;
