Extending the landing page based on previous sketches
Not adding link for quality since I don't find a good target.
Cogwheel illustrations based on the CC 0 image
https://pixabay.com/illustrations/media-internet-message-network-2082641

--- a/static/main.css
+++ b/static/main.css
@@ -285,6 +285,11 @@ table ul li {
     grid-template-columns: auto;
 }
 
+.half {
+    display: grid;
+    grid-template-columns: 1fr;
+}
+
 .box-list {
     display: grid;
     grid-gap: 1em;
@@ -417,6 +422,10 @@ header.item {
 
     .action-boxes {
         grid-template-columns: auto auto;
+    }
+    
+    .half {
+        grid-template-columns: 1fr 1fr;
     }
 }
 
