minor formatting and alignments
centering an image etc<

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -47,11 +47,13 @@
   <section>
     <div class="container">
       <div class="half">
-        <img aria-hidden="true" src="community.svg" width="261" height="161"/>
+        <div class="center-text">
+          <img aria-hidden="true" src="community.svg" width="261" height="161"/>
+        </div>
         <div>
-        <h2>Built by a community</h2>
-        <p>Support our efforts in creating transparency about governmental institutions and their activities online</p>
-        <a class="btn" href="https://www.wikidata.org/wiki/Wikidata:WikiProject_Govdirectory">Learn more about the community</a>
+          <h2>Built by a community</h2>
+          <p>Support our efforts in creating transparency about governmental institutions and their activities online</p>
+          <a class="btn" href="https://www.wikidata.org/wiki/Wikidata:WikiProject_Govdirectory">Learn more about the community</a>
         </div>
       </div>
     </div>
@@ -60,8 +62,8 @@
     <div class="container">
       <div class="half">
         <div>
-        <h2>Data quality through constant curation</h2>
-        <p>Based on Wikipedia's sister project Wikidata the data is constantly fact checked by a rigorous and dedicated community. With the help of tools that help monitor changes in data and entering data correctly, collectively the data can be kept up to date and accurate.</p>
+          <h2>Data quality through constant curation</h2>
+          <p>Based on Wikipedia's sister project Wikidata the data is constantly fact checked by a rigorous and dedicated community. With the help of tools that help monitor changes in data and entering data correctly, collectively the data can be kept up to date and accurate.</p>
         </div>
         <div class="center-text">
           <img aria-hidden="true" src="curation.svg" width="271" height="258"/>
