🛬 Extending the landing page based on previous sketches (#105)
Not adding link for quality since I don't find a good target.
Cogwheel illustrations based on the CC0 image
https://pixabay.com/illustrations/media-internet-message-network-2082641

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -44,6 +44,34 @@
       </ul>
     </div>
   </section>
+  <section>
+    <div class="container">
+      <div class="half">
+        <div class="center-text">
+          <img aria-hidden="true" src="community.svg" width="261" height="161"/>
+        </div>
+        <div>
+          <h2>Built by a community</h2>
+          <p>Support our efforts in creating transparency about governmental institutions and their activities online</p>
+          <a class="btn" href="https://www.wikidata.org/wiki/Wikidata:WikiProject_Govdirectory">Learn more about the community</a>
+        </div>
+      </div>
+    </div>
+  </section>
+    <section class="bg-grey">
+    <div class="container">
+      <div class="half">
+        <div>
+          <h2>Data quality through constant curation</h2>
+          <p>Based on Wikipedia's sister project Wikidata the data is constantly fact checked by a rigorous and dedicated community. With the help of tools that help monitor changes in data and entering data correctly, collectively the data can be kept up to date and accurate.</p>
+        </div>
+        <div class="center-text">
+          <img aria-hidden="true" src="curation.svg" width="271" height="258"/>
+        </div>
+        </div>
+      </div>
+    </div>
+  </section>
 </main>
 {{ end }}
 
