--- a/templates/about.html
+++ b/templates/about.html
@@ -9,7 +9,7 @@
 <header class="splash">
   <div>
     <img aria-hidden="true" src="/logo-white.svg" width="150px">
-    <h1 class="lg-h1">Govdirectory</h1>
+    <h1 class="h1-lg">Govdirectory</h1>
     <p>A crowdsourced and fact checked directory of official governmental online accounts and services.</p>
   </div>
 </header>
