--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,6 +9,23 @@
 
     <link rel="canonical" href="https://www.govdirectory.org{{ block "canonical" . }}{{ end }}">
 
+    <link rel="preload" href="/ubuntu-regular.woff2" as="font" type="font/woff2">
+    <style>
+        @font-face {
+            font-family: "Ubuntu";
+            src: url("/ubuntu-regular.woff2") format("woff2"),
+                 url("/ubuntu-regular.woff") format("woff"),
+                 url("/ubuntu-regular.ttf") format("truetype");
+            font-display: swap;
+        }
+        @font-face {
+            font-family: "Ubuntu";
+            src: url("/ubuntu-light.woff2") format("woff2"),
+                 url("/ubuntu-light.woff") format("woff"),
+                 url("/ubuntu-light.ttf") format("truetype");
+            font-weight: 100;
+        }
+    </style>
     <link rel="stylesheet" href="/main.css">
 
     <noscript>
