--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,16 +13,16 @@
     <style>
         @font-face {
             font-family: "Ubuntu";
-            src: url("/ubuntu-regular.woff2") format("woff2"),
-                 url("/ubuntu-regular.woff") format("woff"),
-                 url("/ubuntu-regular.ttf") format("truetype");
+            src: url("/font/ubuntu-regular.woff2") format("woff2"),
+                 url("/font/ubuntu-regular.woff") format("woff"),
+                 url("/font/ubuntu-regular.ttf") format("truetype");
             font-display: swap;
         }
         @font-face {
             font-family: "Ubuntu";
-            src: url("/ubuntu-light.woff2") format("woff2"),
-                 url("/ubuntu-light.woff") format("woff"),
-                 url("/ubuntu-light.ttf") format("truetype");
+            src: url("/font/ubuntu-light.woff2") format("woff2"),
+                 url("/font/ubuntu-light.woff") format("woff"),
+                 url("/font/ubuntu-light.ttf") format("truetype");
             font-weight: 100;
         }
     </style>
