🎨 add small bottom-margin to buttons
So they do not touch on small screens

--- a/static/main.css
+++ b/static/main.css
@@ -253,6 +253,7 @@ table ul li {
     line-height: 18px;
     border-radius: 3px;
     display: inline-block;
+    margin-bottom: .5em;
 }
 
 .btn:hover, .btn:focus {
