🎨 extend container max width from 800px to 1000px

--- a/static/main.css
+++ b/static/main.css
@@ -455,6 +455,13 @@ header.item {
     }
 }
 
+@media screen and (min-width: 1000px) {
+    .container {
+        width: 1000px;
+        margin: auto;
+    }
+}
+
 
 /* A11Y */
 
