--- a/templates/layout.html
+++ b/templates/layout.html
@@ -24,6 +24,7 @@
                  url("/font/ubuntu-light.woff") format("woff"),
                  url("/font/ubuntu-light.ttf") format("truetype");
             font-weight: 100;
+            font-display: swap;
         }
     </style>
     <link rel="stylesheet" href="/main.css">
