--- a/templates/about.html
+++ b/templates/about.html
@@ -8,7 +8,7 @@
 {{ define "main" }}
 <header class="splash">
   <div>
-    <img aria-hidden="true" src="/logo-white.svg" width="150px">
+    <img aria-hidden="true" src="/logo-white.svg" width="142" height="171">
     <h1 class="h1-lg">Govdirectory</h1>
     <p>A crowdsourced and fact checked directory of official governmental online accounts and services.</p>
   </div>
