📚 add an option to read more on Wikipedia to org pages

--- a/templates/org.html
+++ b/templates/org.html
@@ -78,6 +78,8 @@
                     {{- end -}}
                     </li>
                 </ul>
+                
+                {{ if $details.wikipedia }}<p><a href="{{ $details.wikipedia }}">Read more on Wikipedia.</a></p>{{ end }}
             </div>
 
             <div class="center-text action-boxes">
