first work on new design
to be squashed

--- a/static/main.css
+++ b/static/main.css
@@ -36,6 +36,11 @@ h2 {
     text-align:center;
 }
 
+.body-lg-text {
+    font-size: clamp(2rem, 8vw, 2rem);
+    line-height: 1;
+}
+
 a, a:hover {
     text-decoration: underline;
     color: #FFF;
@@ -54,8 +59,16 @@ a, a:hover {
     color: #fcda02;
 }
 
+.text-orange {
+    color: #E66A49;
+}
+
 .bg-grey {
-    background-color: #eee;
+    background-color: #F8F4ED;
+}
+
+.bg-orange {
+    background: #E66A49;
 }
 
 .center-text {
@@ -84,18 +97,11 @@ section {
 
 /* SPLASH FOREGROUND OF ANIMATION */
 
-.splash {
-    background: linear-gradient(-45deg, #107FC9, #0A4F7D, #1277BA, #0170BA);
-    animation: gradientBG 20s ease infinite;
-    background-size: 400% 400%;
-    color: rgba(255, 255, 255, .9);
-}
 
-.splash div {
+.splash {
     box-sizing: border-box;
     padding: 10px 0;
     display: flex;
-    align-items: center;
     justify-content: center;
     flex-direction: column;
     width: 100%;
@@ -104,11 +110,10 @@ section {
 
 .splash p {
     line-height: 1.55;
-    font-size: clamp(1rem, 2.5vw, 2rem);
-    width: 50%;
-    margin-bottom: 0;
-    text-align: center;
+    font-size: clamp(1.5rem, 4vw, 3rem);
+    margin-top: 0;
     padding-bottom: 50px;
+    color: #FFF;
 }
 
 .splash img {
@@ -168,14 +173,14 @@ nav img {
 }
 
 nav a:hover {
-    background-color: #107FC9;
+    background-color: #E66A49;
     color: #FFF;
 }
 
 /* LARGE CALL-OUT-BOX */
 
 .call-out {
-    background: #0d69a6;
+    background: #E66A49;
     font-size: 1.5rem;
     padding: 1em;
     color: #fff;
@@ -185,7 +190,7 @@ nav a:hover {
 /* FOOTER */
 
 footer {
-    background-color: #00264d;
+    background-color: #E66A49;
     color: #fff;
     padding: 1em;
     height: 100%;
@@ -239,7 +244,7 @@ table th {
 }
 
 table tr:nth-child(even) {
-    background-color: #f2f2f2;
+    background-color: #F8F4ED;
 }
 
 table ul li {
@@ -250,7 +255,7 @@ table ul li {
 /* BUTTONS */
 
 .btn {
-    background: #00264d;
+    background: #062B58;
     color: #fff;
     text-decoration: none;
     padding: 7px 21px;
@@ -261,7 +266,7 @@ table ul li {
 }
 
 .btn:hover, .btn:focus {
-    background: #107FC9;
+    background: #E66A49;
     text-decoration: none;
 }
 
@@ -299,7 +304,7 @@ table ul li {
 .box-list li {
     height: 100px;
     line-height: 100px;
-    background: #107fc9;
+    background: #E66A49;
     border-radius: 3px;
 }
 
@@ -320,7 +325,7 @@ table ul li {
 }
 
 .topic-list div {
-    background: #107fc9;
+    background: #E66A49;
     border-radius: 100%;
     height: 100px;
     text-align: center;
@@ -341,7 +346,7 @@ table ul li {
 /* HEADER */
 
 header.item {
-    background: #0d69a6;
+    background: #E66A49;
     margin-top: 2em;
     padding: 2em;
     color: #fff;
@@ -381,7 +386,7 @@ header.item {
 .spinner > div {
     width: 18px;
     height: 18px;
-    background-color: #333;
+    background-color: #E66A49;
     border-radius: 100%;
     display: inline-block;
     animation: dots 1.4s infinite ease-in-out both;
