--- a/templates/landing.html
+++ b/templates/landing.html
@@ -7,14 +7,34 @@
 
 {{ define "main" }}
 <header class="splash">
-  <div>
-    <img aria-hidden="true" src="/logo-white.svg" width="142" height="171">
-    <h1 class="h1-lg">Govdirectory</h1>
-    <p>A crowdsourced and fact checked directory of official governmental online accounts and services.</p>
+  <div class="container">
+    <h1 class="h1-lg text-orange">Get your voice heard!</h1>
+    <p>The easiest way to contact your government<span class="text-orange">.</span></p>
   </div>
 </header>
 
 <main>
+  <section class="bg-orange">
+    <div class="container">
+      <div class="half">
+        <div class="body-lg-text">
+          Start the conversation now!
+        </div>
+        <div>
+          <div class="half">
+            <div><a href="/countries/" class="btn">Explore by country</a></div>
+            
+            <div><a href="/topics/" class="btn">Explore by topic</a></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="bg-grey">
+    <div class="container h3-lg">
+      Govdirectory is a crowdsourced and fact checked directory of official governmental online accounts and services.
+    </div>
+  </section>
   <section>
     <div class="container center-text">
       <h2>Explore by country</h2>
